feat: Download submission archive (#179)
* docs(openapi): Add new endpoint to the spec

* feat(submissions): Add endpoint to allow users to download submissions archives

* refactor(submissions): Rename endpoints to solve conflicts

* docs(http): Update bruno and insomnia collections

* test(submissions): Add test to ensure users can download the archive of a submission
