# docs/openapi/spec.openapi.yaml
@@ -1477,7 +1477,7 @@ paths:
                 type: string
                 format: binary
         "404":
-          description: No test bblock found with the given UUID. 
+          description: No test block found with the given UUID. 
           content:
             application/json:
               schema:
@@ -1946,7 +1946,7 @@ paths:
                 $ref: "#/components/schemas/default_error_response"
                 
   # Submissions
-  /submissions/{test_block_uuid}/status:
+  /submissions/test_blocks/{test_block_uuid}/status:
     get:
       tags:
         - Submissions
@@ -1986,7 +1986,7 @@ paths:
               schema:
                 $ref: "#/components/schemas/default_error_response"
   
-  /submissions/{test_block_uuid}:
+  /submissions/test_blocks/{test_block_uuid}:
     post:
       tags: 
         - Submissions
@@ -2034,6 +2034,47 @@ paths:
             application/json:
               schema:
                 $ref: "#/components/schemas/default_error_response"
+
+  /submissions/{submission_uuid}/archive: 
+      get: 
+        tags:
+          - Submissions
+        security:
+          - cookieAuth: []
+        parameters:
+          - in: path
+            name: submission_uuid
+            schema:
+              type: string
+              example: "325fbfa1-bd9b-4846-8fdd-8383b0e1f857"
+            required: true
+        description: Get `.zip` archive with the code sent by the student in the given submission. 
+        responses:
+          "200":
+            description: The `.zip` archive is retrieved / downloaded
+            content: 
+              application/zip:
+                schema:
+                  type: string
+                  format: binary
+          "404":
+            description: No submission found with the given UUID. 
+            content:
+              application/json:
+                schema:
+                  $ref: "#/components/schemas/default_error_response"
+          "403":
+            description: The session token isn't valid or the user doesn't have enough permissions.
+            content:
+              application/json:
+                schema:
+                  $ref: "#/components/schemas/default_error_response"
+          "500":
+            description: There was an unexpected error in the server side.
+            content:
+              application/json:
+                schema:
+                  $ref: "#/components/schemas/default_error_response"
     
   # Grades
   /grades/laboratories/{laboratory_uuid}/students/{student_uuid}/rubrics/{rubric_uuid}: 
